tests/fail/semantic/redefined_builtin_type.cyt
record int(val: string)

record Int(val: string) // this is valid

// args: --no-colour

// expected stderr:
// error: redefined builtin type `int`
//   ┌─ ../tests/fail/semantic/redefined_builtin_type.cyt:1:8
//   │
// 1 │ record int(val: string)
//   │        ^^^ this type is redefining a built-in type